--- a/pdf2word.html
+++ b/pdf2word.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Free online PDF to Word converter tool. Convert multiple PDF files to Word documents quickly and easily with our responsive web application.">
     <meta name="keywords" content="PDF to Word, PDF converter, Word converter, document conversion, online converter, free PDF converter">
-    <meta name="author" content="PDF to Word Converter">
+    <meta name="author" content="Aditya Singh">
     <meta name="robots" content="index, follow">
     
     <!-- Open Graph Tags -->
